# CannabisMath

./: .gitignore  CannabisMath.sln  README.md  package-lock.json
js/: .npmignore  README.md  package-lock.json  package.json  test.ts  tsconfig.json
js/src/: index.ts  invalidInputs.test.ts  sharedFixtures.test.ts
js/src/composites/: cannabisValueCalculator.test.ts  cannabisValueCalculator.ts
js/src/dosing/: doseCalculator.test.ts  doseCalculator.ts
js/src/packaging/: packageBreakdownResult.ts  packageCalculator.test.ts  packageCalculator.ts
js/src/potency/: potencyCalculator.test.ts  potencyCalculator.ts
js/src/pricing/: priceCalculator.test.ts  priceCalculator.ts  pricingResult.ts
js/src/rounding/: roundingCalculator.test.ts  roundingCalculator.ts  roundingMode.ts  roundingResult.ts
js/src/taxes/: taxCalculator.test.ts  taxCalculator.ts  taxResult.ts
js/src/weights/: weightConverter.test.ts  weightConverter.ts
python/: README.md  pyproject.toml
python/cannabismath/: __init__.py  composites.py  dosing.py  packaging.py  potency.py  pricing.py  rounding.py  taxes.py  weights.py
python/cannabismath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_composites.py  test_dosing.py  test_invalid_inputs.py  test_packaging.py  test_pricing.py  test_shared_fixtures.py  test_taxes.py
shared/test-fixtures/: core-fixtures.json
src/CannabisMath.Core/: CannabisMath.Core.csproj
src/CannabisMath.Core/Dosing/: DoseCalculator.cs
tests/CannabisMath.Core.Tests/: CannabisMath.Core.Tests.csproj  InvalidInputTests.cs  SharedFixturesTests.cs
(+24 files in other folders)
