[project]
name = "cannabismath"
version = "0.1.0"
description = "Cross-platform cannabis math library for potency, dosing, pricing, taxes, rounding, and retail calculations."
authors = [{ name="LJ Robinson" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"