[project]
name = "cannabismath"
version = "0.1.2"
description = "Cross-platform cannabis math library for potency, dosing, pricing, taxes, rounding, and retail calculations."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "LJ Robinson" }]
requires-python = ">=3.9"
license = { text = "MIT" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"